--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
-    <link rel="stylesheet" href="node_modules/intro.js/introjs.css" type="text/css">
+    <link rel="stylesheet" href="https://unpkg.com/intro.js/minified/introjs.min.css" type="text/css">
     <title>Negative Ninjas</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"
         defer></script>
     <script src="assets/js/script.js" defer></script>
-    <script src="node_modules/intro.js/intro.js" defer></script>
+    <script src="https://unpkg.com/intro.js/minified/intro.min.js" defer></script>
 </head>
 
 <body class="light-theme">
