--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
                 </button>
             </div>
         </header>
-        <div class="question-area container my-auto text-center" data-intro="Answer times table questions correctly to progress to the next level" data-step="2">
+        <div class="question-area container my-auto text-center pb-2" data-intro="Answer times table questions correctly to progress to the next level" data-step="2">
             <div class="row">
                 <h2><span class="en">Defeat the dragon to achieve your </span><span class="cy">Trechu'r draig
                         i gyflawni eich gwregys <span id="gwregys-presennol">Blank</span></span><span
                         class="en"><span id="current-belt">Blank</span> belt</span></h2>
             </div>
             <div class="question-row row">
-                <div class="display-4 col-2" id="operand1">0</div>
-                <div class="display-4 col-1" id="operator" data-intro="Depending on your level you may answer times, divide or mixture questions" data-step="3">x</div>
-                <div class="display-4 col-2" id="operand2" data-intro="The higher the belt the harder the times tables" data-step="4">0</div>
-                <div class="display-4 col-1">=</div>
-                <input class="display-4 col-4" id="answer-box" type="number" autofocus required data-intro="Type your answers here then press the button or press enter on your keyboard to submit." data-step="5">
-                <button id="btn-submit" class="btn display-4 my-auto m-2 col-1" aria-label="Submit answer"><i class="fas fa-arrow-right"></i></button>
+                <div class="display-4 col-2 col-sm-2" id="operand1">0</div>
+                <div class="display-4 col-2 col-sm-1" id="operator" data-intro="Depending on your level you may answer times, divide or mixture questions" data-step="3">x</div>
+                <div class="display-4 col-2 col-sm-2" id="operand2" data-intro="The higher the belt the harder the times tables" data-step="4">0</div>
+                <div class="display-4 col-2 col-sm-1">=</div>
+                <input class="display-4 col-7 col-sm-4" id="answer-box" type="number" autofocus required data-intro="Type your answers here then press the button or press enter on your keyboard to submit." data-step="5">
+                <button id="btn-submit" class="btn display-4 my-auto m-2 col-2 col-sm-1" aria-label="Submit answer"><i class="fas fa-arrow-right"></i></button>
             </div>
         </div>
         <div class="fight-scene container">
@@ -87,25 +87,27 @@
                 </div>
             </div>
         </div>
-        <footer class="row py-2">
-            <div class="col-6 my-auto">
-                <p class="lead float-start my-auto"> 
-                    <span class="cy lead float-start my-auto">Sgor: </span>
-                    <span class="en lead float-start my-auto">Score: </span>
-                    <i class="fas fa-check" aria-hidden="true"></i><span class="visually-hidden">Correct</span><span id="correct">0</span>
-                    <i class="fas fa-times" aria-hidden="true"></i><span class="visually-hidden">Incorrect</span><span id="incorrect">0</span>
-                </p>
-            </div>
-            <div class="col-6 my-auto">
-                <a id="btn-contact" class="float-end" href="https://github.com/chelsea-designs"><i class="fab fa-github" aria-hidden="true"></i><span class="cy"> Cyswllt</span><span class="en"> Contact</span></a>
+        <footer class="container-fluid">
+            <div class="row p-2">
+                <div class="col-6 my-auto">
+                    <p class="lead float-start my-auto"> 
+                        <span class="cy lead float-start my-auto">Sgor: </span>
+                        <span class="en lead float-start my-auto">Score: </span>
+                        <i class="fas fa-check" aria-hidden="true"></i><span class="visually-hidden">Correct</span><span id="correct">0</span>
+                        <i class="fas fa-times" aria-hidden="true"></i><span class="visually-hidden">Incorrect</span><span id="incorrect">0</span>
+                    </p>
+                </div>
+                <div class="col-6 my-auto">
+                    <a id="btn-contact" class="float-end" href="https://github.com/chelsea-designs"><i class="fab fa-github" aria-hidden="true"></i><span class="cy"> Cyswllt</span><span class="en"> Contact</span></a>
+                </div>
             </div>
         </footer>
         <!-- Settings Modal -->
         <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="level-selector" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
-                    <div class="modal-body text-center">
-                        <div class="home-info text-center smaller col-10 mx-auto p-2">
+                    <div class="modal-body text-center pb-0">
+                        <div class="home-info text-center smaller mx-auto p-1">
                             <p>
                                 <span class="cy lead">Atebwch cwestiynau tablau lluosi sy'n cynnwys rhifau negyddol i drechu'r ddreigiau.
                                 <br><strong>Gallwch chi ennill y teitl Ninja Negyddol Gwregys Du?</strong></span>
@@ -114,15 +116,15 @@
                             </p>
                         </div>
                         <div class="row">
-                            <div class="col-4 form-check form-switch">
+                            <div class="col-sm-2 col-4 offset-0 offset-sm-3 form-check form-switch">
                                 <input class="form-check-input" type="checkbox" role="switch" id="btn-sound">
                                 <label class="form-check-label" for="btn-sound"><i class="fas fa-volume-up" aria-hidden="true"></i><span class="visually-hidden">Volume</span></label>
                             </div>
-                            <div class="col-4 form-check form-switch">
+                            <div class="col-sm-2 col-4 form-check form-switch">
                                 <input class="form-check-input" type="checkbox" role="switch" id="btn-lang">
                                 <label class="form-check-label" for="btn-lang"><i class="fas fa-language" aria-hidden="true"></i><span class="visually-hidden">Language</span></label>
                             </div>
-                            <div class="col-4 form-check form-switch">
+                            <div class="col-sm-2 col-4 form-check form-switch">
                                 <input class="form-check-input" type="checkbox" role="switch" id="btn-dark">
                                 <label class="form-check-label" for="btn-dark"><i class="fas fa-moon" aria-hidden="true"></i><span class="visually-hidden">Dark Mode</span></label>
                             </div>
@@ -136,39 +138,39 @@
                                     </h2>
                                 </legend>
                                 <div class="row mx-auto">
-                                    <label class="col-4 text-center">
+                                    <label class="col-4 text-center p-0">
                                         <input type="radio" name="level" value="0" checked>
                                         <img class="belt-image" src="assets/images/white.png" alt="white martial arts belt">
                                     </label>
-                                    <label class="col-4 text-center">
+                                    <label class="col-4 text-center p-0">
                                         <input type="radio" name="level" value="1">
                                         <img class="belt-image" src="assets/images/yellow.png" alt="yellow martial arts belt">
                                     </label>
-                                    <label class="col-4 text-center">
+                                    <label class="col-4 text-center p-0">
                                         <input type="radio" name="level" value="2">
                                         <img class="belt-image" src="assets/images/orange.png" alt="orange martial arts belt">
                                     </label>
-                                    <label class="col-4 text-center">
+                                    <label class="col-4 text-center p-0">
                                         <input type="radio" name="level" value="3">
                                         <img class="belt-image" src="assets/images/green.png" alt="green martial arts belt">
                                     </label>
-                                    <label class="col-4 text-center">
+                                    <label class="col-4 text-center p-0">
                                         <input type="radio" name="level" value="4">
                                         <img class="belt-image" src="assets/images/purple.png" alt="purple martial arts belt">
                                     </label>
-                                    <label class="col-4 text-center">
+                                    <label class="col-4 text-center p-0">
                                         <input type="radio" name="level" value="5">
                                         <img class="belt-image" src="assets/images/blue.png" alt="blue martial arts belt">
                                     </label>
-                                    <label class="col-4 text-center">
+                                    <label class="col-4 text-center p-0">
                                         <input type="radio" name="level" value="6">
                                         <img class="belt-image" src="assets/images/brown.png" alt="brown martial arts belt">
                                     </label>
-                                    <label class="col-4 text-center">
+                                    <label class="col-4 text-center p-0">
                                         <input type="radio" name="level" value="7">
                                         <img class="belt-image" src="assets/images/red.png" alt="red martial arts belt">
                                     </label>
-                                    <label class="col-4 text-center">
+                                    <label class="col-4 text-center p-0">
                                         <input type="radio" name="level" value="8">
                                         <img class="belt-image" src="assets/images/black.png"  alt="black martial arts belt">
                                     </label>
@@ -176,8 +178,8 @@
                             </fieldset>
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn--black btn-start col-3 mx-auto m-2" aria-label="Start game"><span class="cy">Chwarae</span><span
+                    <div class="modal-footer pt-0">
+                        <button type="button" class="btn btn--black btn-start col-3 mx-auto" aria-label="Start game"><span class="cy">Chwarae</span><span
                             class="en">Play</span></button>
                     </div>
                 </div>
