bug fix going back to settings wrongly reset game

--- a/index.html
+++ b/index.html
@@ -179,8 +179,11 @@
                         </div>
                     </div>
                     <div class="modal-footer pt-0">
-                        <button type="button" class="btn btn--black btn-start col-3 mx-auto" aria-label="Start game"><span class="cy">Chwarae</span><span
-                            class="en">Play</span></button>
+                        <button type="button" class="btn btn--black btn-start col-4 mx-auto" aria-label="Start game"><span class="cy">Chwarae</span><span
+                            class="en">Play</span>
+                        </button>
+                        <button type="button" id="btn-return" class="btn btn--white col-4 mx-auto" aria-label="Return to game"><span class="cy">Yn ôl</span><span
+                            class="en">Return to game</span></button>
                     </div>
                 </div>
             </div>
