--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="col-lg-3 col-md-4 col-5">
                     <div class="row p-0 progress" data-intro="Keep an eye on your health bar, if you answer too many wrong, the dragon will defeat you" data-step="9">
                         <div id="battle_progress--ninja" class="progress-bar bg-success p-0"
-                            role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
+                            role="progressbar" aria-valuetext="ninja health bar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
                             aria-valuemax="100">
                         </div>
                     </div>
@@ -71,13 +71,13 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-4 col-2 weapon_container my-auto">
-                    <img id="battle_weapon--star" class="battle_img--weapon" src="assets/images/battle_weapon--star.png" alt="ninja throwing star">
-                    <img id="battle_weapon--fire" class="battle_img--weapon" src="assets/images/battle_weapon--fire.png" alt="dragon fire ball">
+                    <img id="battle_weapon--star" class="battle_img--weapon" src="assets/images/ninja-star.png" alt="ninja throwing star">
+                    <img id="battle_weapon--fire" class="battle_img--weapon" src="assets/images/fire-ball.png" alt="dragon fire ball">
                 </div>
                 <div class="col-lg-3 col-md-4 col-5">
                     <div class="row progress">
                         <div id="battle_progress--dragon" class="progress-bar bg-success p-0"
-                            role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
+                            role="progressbar" style="width: 100%" aria-valuetext="dragon health bar" aria-valuenow="100" aria-valuemin="0"
                             aria-valuemax="100" data-intro="But, if you answer lots of correct answers you will drain the dragons health and complete the level for your belt." data-step="10">
                         </div>
                     </div>
@@ -103,7 +103,7 @@
             </div>
         </footer>
         <!-- Settings Modal -->
-        <div class="modal fade" id="modal--settings" tabindex="-1" aria-labelledby="settings_level--selector" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+        <div class="modal fade" id="modal--settings" tabindex="-1" aria-labelledby="modal_title--settings" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-body text-center pb-0">
@@ -132,9 +132,9 @@
                         <div class="row">
                             <fieldset>
                                 <legend>
-                                    <h2 id="settings_level--selector" class="text-center">
+                                    <h2 class="text-center">
                                         <span class="cy">Dewiswch eich lefel i ennill eich gwregys:</span>
-                                        <span class="en">Choose your level to earn your belt:</span>
+                                        <span class="en" id="modal_title--settings">Choose your level to earn your belt:</span>
                                     </h2>
                                 </legend>
                                 <div class="row mx-auto">
@@ -189,12 +189,12 @@
             </div>
         </div>
         <!-- Next Level Modal -->
-        <div class="modal fade" id="modal--next" tabindex="-1" aria-labelledby="modal--nextLabel" aria-hidden="true">
+        <div class="modal fade" id="modal--next" tabindex="-1" aria-labelledby="modal_title--next" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-body text-center">
                         <span class="cy">Rydych chi wedi trechu'r draig ac wedi ennill gwregys <span
-                                id="gwregys-modal">BLANK</span>!</span><span class="en">You defeated the dragon and
+                                id="gwregys-modal">BLANK</span>!</span><span class="en" id="modal_title--next">You defeated the dragon and
                             earned your <span id="belt-modal">BLANK</span> belt!</span>
                         <img id="ninja-win" class="modal_img--ninja" src="assets/images/ninja0.png" alt="ninja wearing correct colour belt">
                     </div>
@@ -207,11 +207,11 @@
             </div>
         </div>
         <!-- Replay Level Modal -->
-        <div class="modal fade" id="modal--replay" tabindex="-1" aria-labelledby="modal--replayLabel" aria-hidden="true">
+        <div class="modal fade" id="modal--replay" tabindex="-1" aria-labelledby="modal_title--replay" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-body text-center">
-                        <div class="en">
+                        <div class="en" id="modal_title--replay">
                             Oh no!
                             <br>The dragon beat you.
                             <br>Try again!
@@ -232,7 +232,7 @@
             </div>
         </div>
         <!-- Win Modal -->
-        <div class="modal fade" id="modal--win" tabindex="-1" aria-labelledby="modal--winLabel" aria-hidden="true">
+        <div class="modal fade" id="modal--win" tabindex="-1" aria-labelledby="modal_title--win" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-body text-center">
@@ -240,7 +240,7 @@
                             Rydych wedi trechu'r draig ac rydych chi wedi ennill gwregys du!
                             <br>Chi yw'r Ninja Negyddol Gorau yn y Byd!
                         </div>
-                        <div class="en">
+                        <div class="en" id="modal_title--win">
                             You defeated the dragon and earned your black belt!
                             <br>You are the Ultimate Negative Ninja!
                         </div>
