--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="col-lg-3 col-md-4 col-5">
                     <div class="row p-0 progress" data-intro="Keep an eye on your health bar, if you answer too many wrong, the dragon will defeat you" data-step="9">
                         <div id="battle_progress--ninja" class="progress-bar bg-success p-0"
-                            role="progressbar" aria-valuetext="ninja health bar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
+                            role="progressbar" aria-label="ninja health bar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
                             aria-valuemax="100">
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                 <div class="col-lg-3 col-md-4 col-5">
                     <div class="row progress">
                         <div id="battle_progress--dragon" class="progress-bar bg-success p-0"
-                            role="progressbar" style="width: 100%" aria-valuetext="dragon health bar" aria-valuenow="100" aria-valuemin="0"
+                            role="progressbar" style="width: 100%" aria-label="dragon health bar" aria-valuenow="100" aria-valuemin="0"
                             aria-valuemax="100" data-intro="But, if you answer lots of correct answers you will drain the dragons health and complete the level for your belt." data-step="10">
                         </div>
                     </div>
