--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                 <div class="display-4 col-2 col-sm-1" id="questions_operator" data-intro="Depending on your level you may answer times, divide or mixture questions" data-step="3">x</div>
                 <div class="display-4 col-2 col-sm-2" id="questions_operand--two" data-intro="The higher the belt the harder the times tables" data-step="4">0</div>
                 <div class="display-4 col-2 col-sm-1">=</div>
-                <input class="display-4 col-7 col-sm-4" id="questions_input" type="number" autofocus required data-intro="Type your answers here then press the button or press enter on your keyboard to submit." data-step="5">
+                <label><span class="visually-hidden">Answer Box:</span>
+                    <input class="display-4 col-7 col-sm-4" id="questions_input" type="number" autofocus required data-intro="Type your answers here then press the button or press enter on your keyboard to submit." data-step="5">
+                </label>
                 <button class="btn questions_submit display-4 my-auto m-2 col-2 col-sm-1" aria-label="Submit answer"><i class="fas fa-arrow-right"></i></button>
             </div>
         </div>
