improve landscape orientation design

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </header>
         <div class="questions container my-auto text-center pb-2" data-intro="Answer times table questions correctly to progress to the next level" data-step="2">
             <div class="row">
-                <h2>
+                <h2 class="px-0">
                     <span class="en">Defeat the dragon to achieve your </span><span class="cy">Trechu'r draig
                         i gyflawni eich gwregys <span id="gwregys-presennol">Blank</span></span><span
                         class="en"><span id="current-belt">Blank</span> belt</span></h2>
@@ -68,14 +68,14 @@
         <div class="battle container">
             <div class="row">
                 <div class="col-lg-3 col-md-4 col-5">
-                    <div class="row p-0 progress" data-intro="Keep an eye on your health bar, if you answer too many wrong, the dragon will defeat you" data-step="9">
+                    <div class="row p-0 progress mx-auto" data-intro="Keep an eye on your health bar, if you answer too many wrong, the dragon will defeat you" data-step="9">
                         <div id="battle_progress--ninja" class="progress-bar bg-success p-0"
                             role="progressbar" aria-label="ninja health bar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
                             aria-valuemax="100">
                         </div>
                     </div>
                     <div class="row" data-intro="You are the negative ninja! If you answer correctly you will attack the dragon" data-step="6">
-                        <img id="battle_img--ninja" class="battle_img--character" src="assets/images/ninja0.png" alt="ninja wearing correct colour belt">
+                        <img id="battle_img--ninja" class="battle_img--character mx-auto" src="assets/images/ninja0.png" alt="ninja wearing correct colour belt">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-4 col-2 weapon_container my-auto">
@@ -83,14 +83,14 @@
                     <img id="battle_weapon--fire" class="battle_img--weapon" src="assets/images/fire-ball.png" alt="dragon fire ball">
                 </div>
                 <div class="col-lg-3 col-md-4 col-5">
-                    <div class="row progress">
+                    <div class="row progress mx-auto">
                         <div id="battle_progress--dragon" class="progress-bar bg-success p-0"
                             role="progressbar" style="width: 100%" aria-label="dragon health bar" aria-valuenow="100" aria-valuemin="0"
                             aria-valuemax="100" data-intro="But, if you answer lots of correct answers you will drain the dragons health and complete the level for your belt." data-step="10">
                         </div>
                     </div>
                     <div class="row" data-intro="If you answer incorrectly, the dragon will attach you!" data-step="7">
-                        <img id="battle_img--dragon" class="battle_img--character" src="assets/images/dragon0.png" alt="dragon wearing next colour belt">
+                        <img id="battle_img--dragon" class="battle_img--character  mx-auto" src="assets/images/dragon0.png" alt="dragon wearing next colour belt">
                     </div>
                 </div>
             </div>
