update read me and landscape alert

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </div>
         </div>
         <!-- Next Level Modal -->
-        <div class="modal fade" id="modal--next" tabindex="-1" aria-labelledby="modal_title--next" aria-hidden="true">
+        <div class="modal fade" id="modal--next" tabindex="-1" aria-labelledby="modal_title--next" aria-hidden="true" data-bs-backdrop="static">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-body text-center">
@@ -215,7 +215,7 @@
             </div>
         </div>
         <!-- Replay Level Modal -->
-        <div class="modal fade" id="modal--replay" tabindex="-1" aria-labelledby="modal_title--replay" aria-hidden="true">
+        <div class="modal fade" id="modal--replay" tabindex="-1" aria-labelledby="modal_title--replay" aria-hidden="true" data-bs-backdrop="static">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-body text-center">
@@ -240,7 +240,7 @@
             </div>
         </div>
         <!-- Win Modal -->
-        <div class="modal fade" id="modal--win" tabindex="-1" aria-labelledby="modal_title--win" aria-hidden="true">
+        <div class="modal fade" id="modal--win" tabindex="-1" aria-labelledby="modal_title--win" aria-hidden="true" data-bs-backdrop="static">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-body text-center">
