--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         data-step="9">
                         <div id="battle_progress--ninja" class="progress-bar bg-success p-0" role="progressbar"
                             aria-label="ninja health bar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
-                            aria-valuemax="100">
+                            aria-valuemax="100">100
                         </div>
                     </div>
                     <div class="row"
@@ -106,7 +106,7 @@
                             style="width: 100%" aria-label="dragon health bar" aria-valuenow="100" aria-valuemin="0"
                             aria-valuemax="100"
                             data-intro="But, if you answer lots of correct answers you will drain the dragons health and complete the level for your belt."
-                            data-step="10">
+                            data-step="10">100
                         </div>
                     </div>
                     <div class="row" data-intro="If you answer incorrectly, the dragon will attach you!" data-step="7">
