remove score from footer, add score to bars

--- a/index.html
+++ b/index.html
@@ -118,19 +118,9 @@
         </div>
         <footer class="container-fluid">
             <div class="row p-2">
-                <div class="col-6 my-auto">
-                    <p class="lead float-start my-auto">
-                        <span class="cy lead float-start my-auto">Sgor: </span>
-                        <span class="en lead float-start my-auto">Score: </span>
-                        <i class="fas fa-check" aria-hidden="true"></i><span class="visually-hidden">Correct</span><span
-                            id="correct">0</span>
-                        <i class="fas fa-times" aria-hidden="true"></i><span
-                            class="visually-hidden">Incorrect</span><span id="incorrect">0</span>
-                    </p>
-                </div>
-                <div class="col-6 my-auto">
-                    <a class="footer_btn--contact float-end" href="https://github.com/chelsea-designs"
-                        target="_blank"><i class="fab fa-github" aria-hidden="true"></i><span class="cy">
+                <div class="col my-auto text-center">
+                    <a class="footer_btn--contact" href="https://github.com/chelsea-designs" target="_blank"><i
+                            class="fab fa-github" aria-hidden="true"></i><span class="cy">
                             Datblygwr</span><span class="en"> Developer</span></a>
                 </div>
             </div>
