consistent file names

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-4 col-2 weapon_container my-auto">
-                    <img id="battle_weapon--star" class="battle_img--weapon" src="assets/images/ninja-star.png"
+                    <img id="battle_weapon--star" class="battle_img--weapon" src="assets/images/ninjaStar.png"
                         alt="ninja throwing star">
-                    <img id="battle_weapon--fire" class="battle_img--weapon" src="assets/images/fire-ball.png"
+                    <img id="battle_weapon--fire" class="battle_img--weapon" src="assets/images/fireBall.png"
                         alt="dragon fire ball">
                 </div>
                 <div class="col-lg-3 col-md-4 col-5">
@@ -263,7 +263,7 @@
                             <br>Mae'r draig wedi ennill.
                             <br>Rhoi gynnig arall arni!
                         </div>
-                        <img class="modal_img--ninja" src="assets/images/ninja-sad.png" alt="ninja crying">
+                        <img class="modal_img--ninja" src="assets/images/ninjaSad.png" alt="ninja crying">
                     </div>
                     <div class="modal-footer">
                         <button class="btn modal_btn--black mx-auto" type="button" data-bs-dismiss="modal"
