--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                 <div class="display-4 col-2 col-sm-1">=</div>
                 <div class="display-4 col-7 col-sm-4">
                     <label><span class="visually-hidden">Answer Box:</span>
-                        <input class="w-100" id="questions_input" type="number" pattern="\d*" autofocus required
+                        <input class="w-100" id="questions_input" type="number" pattern="\d*" step="1" autofocus
+                            required
                             data-intro="Type your answers here then press the button or press enter on your keyboard to submit."
                             data-step="5">
                     </label>
