--- a/index.html
+++ b/index.html
@@ -131,6 +131,26 @@
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-body text-center pb-0">
+                        <div class="row">
+                            <div class="col-sm-2 col-4 offset-0 offset-sm-3 form-check form-switch">
+                                <input class="form-check-input" type="checkbox" role="switch" id="modal_btn--sound"
+                                    tabindex="0">
+                                <label class="form-check-label" for="modal_btn--sound"><i class="fas fa-volume-up"
+                                        aria-hidden="true"></i><span class="visually-hidden">Volume</span></label>
+                            </div>
+                            <div class="col-sm-2 col-4 form-check form-switch">
+                                <input class="form-check-input" type="checkbox" role="switch" id="modal_btn--lang"
+                                    tabindex="0">
+                                <label class="form-check-label" for="modal_btn--lang"><i class="fa fa-comments"
+                                        aria-hidden="true"></i><span class="visually-hidden">Language</span></label>
+                            </div>
+                            <div class="col-sm-2 col-4 form-check form-switch">
+                                <input class="form-check-input" type="checkbox" role="switch" id="modal_btn--dark"
+                                    tabindex="0">
+                                <label class="form-check-label" for="modal_btn--dark"><i class="fas fa-moon"
+                                        aria-hidden="true"></i><span class="visually-hidden">Dark Mode</span></label>
+                            </div>
+                        </div>
                         <div class="text-center smaller mx-auto p-1">
                             <p>
                                 <span class="cy lead">Atebwch cwestiynau tablau lluosi sy'n cynnwys rhifau negyddol i
@@ -140,23 +160,6 @@
                                     the dragons.
                                     <br><strong>Can you become a black belt negative ninja?</strong></span>
                             </p>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-2 col-4 offset-0 offset-sm-3 form-check form-switch">
-                                <input class="form-check-input" type="checkbox" role="switch" id="modal_btn--sound">
-                                <label class="form-check-label" for="modal_btn--sound"><i class="fas fa-volume-up"
-                                        aria-hidden="true"></i><span class="visually-hidden">Volume</span></label>
-                            </div>
-                            <div class="col-sm-2 col-4 form-check form-switch">
-                                <input class="form-check-input" type="checkbox" role="switch" id="modal_btn--lang">
-                                <label class="form-check-label" for="modal_btn--lang"><i class="fa fa-comments"
-                                        aria-hidden="true"></i><span class="visually-hidden">Language</span></label>
-                            </div>
-                            <div class="col-sm-2 col-4 form-check form-switch">
-                                <input class="form-check-input" type="checkbox" role="switch" id="modal_btn--dark">
-                                <label class="form-check-label" for="modal_btn--dark"><i class="fas fa-moon"
-                                        aria-hidden="true"></i><span class="visually-hidden">Dark Mode</span></label>
-                            </div>
                         </div>
                         <div class="row">
                             <fieldset>
@@ -169,7 +172,7 @@
                                 </legend>
                                 <div class="row mx-auto">
                                     <label class="col-4 text-center p-0">
-                                        <input type="radio" name="level" value="0" checked>
+                                        <input type="radio" name="level" value="0" checked tabindex="0">
                                         <img class="img_belt" src="assets/images/white.png"
                                             alt="white martial arts belt">
                                     </label>
@@ -217,10 +220,12 @@
                     </div>
                     <div class="modal-footer pt-0">
                         <button type="button" class="btn modal_btn--black btn-start col-4 mx-auto"
-                            aria-label="Start game"><span class="cy">Chwarae</span><span class="en">Play</span>
+                            aria-label="Start game" tabindex="0"><span class="cy">Chwarae</span><span
+                                class="en">Play</span>
                         </button>
                         <button type="button" id="modal_btn--return" class="btn modal_btn--white col-4 mx-auto"
-                            aria-label="Return to game"><span class="cy">Yn ôl</span><span class="en">Return to
+                            aria-label="Return to game" tabindex="0"><span class="cy">Yn ôl</span><span
+                                class="en">Return to
                                 game</span></button>
                     </div>
                 </div>
