add message to turn device to portrait

--- a/index.html
+++ b/index.html
@@ -335,6 +335,9 @@
             </div>
         </div>
     </div>
+    <div class="message text-center">
+        <h1>Please rotate your device to portrait view to play the game.</h1>
+    </div>
 </body>
 
 </html>
