--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             data-intro="Answer times table questions correctly to progress to the next level" data-step="2">
             <div class="row">
                 <h2 class="col-10 px-0">
-                    <span class="en">Defeat the dragon to achieve your </span><span class="cy">Trechu'r draig
+                    <span class="en">Defeat the dragon to earn your </span><span class="cy">Trechu'r draig
                         i gyflawni eich gwregys <span id="gwregys-presennol">Blank</span></span><span class="en"><span
                             id="current-belt">Blank</span> belt</span></h2>
                 <h2 class="col-2 stopwatch">
@@ -112,7 +112,7 @@
                             data-step="10">100
                         </div>
                     </div>
-                    <div class="row" data-intro="If you answer incorrectly, the dragon will attach you!" data-step="7">
+                    <div class="row" data-intro="If you answer incorrectly, the dragon will attack you!" data-step="7">
                         <img id="battle_img--dragon" class="battle_img--character  mx-auto"
                             src="assets/images/dragon0.png" alt="dragon wearing next colour belt">
                     </div>
