add average speed to modal win and next

--- a/index.html
+++ b/index.html
@@ -249,6 +249,11 @@
                             </span> belt!
                         </span>
                         <br>
+                        <span class="cy strong">Amser (eiliadau) cymedrig ar gyfer ateb cywir: </span><span
+                            class="en strong">Average
+                            time (seconds) per correct answer: </span><span class="strong" id="speed-next">BLANK
+                        </span>
+                        <br>
                         <img id="ninja-win" class="modal_img--ninja" src="assets/images/ninja0.png"
                             alt="ninja wearing correct colour belt">
                     </div>
@@ -329,6 +334,11 @@
                             You defeated the dragon and earned your black belt!
                             <br>You are the Ultimate Negative Ninja!
                         </div>
+                        <span class="cy strong">Amser (eiliadau) cymedrig ar gyfer ateb cywir: </span><span
+                            class="en strong">Average
+                            time (seconds) per correct answer: </span><span class="strong" id="speed-win">BLANK
+                        </span>
+                        <br>
                         <img class="modal_img--ninja" src="assets/images/ninja10.png" alt="ninja wearing black belt">
                     </div>
                     <div class="modal-footer">
