--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"
         defer></script>
     <script src="https://unpkg.com/intro.js/minified/intro.min.js" defer></script>
-    <script type="module" src="assets/js/script.js" defer></script>
+    <script src="assets/js/script.js" defer></script>
 </head>
 
 <body class="theme--light">
